 - Qt: Fix crash when switching from high-resolution OpenGL renderer to software
 - Qt: Fix OpenGL renderer lagging behind when fast-forwarding (fixes mgba.io/i/2094)
 - Qt: Fix smudged window icon on Windows
 - Qt: Fix saving settings enabling camera when camera name changes (fixes mgba.io/i/2125)
 - Qt: Fix frames getting backlogged (fixes mgba.io/i/2122)
Misc:
 - Core: Truncate preloading ROMs that slightly exceed max size (fixes mgba.io/i/2093)
 - GBA: Default-enable VBA bug compat for Ruby and Emerald ROM hacks
 - GBA Memory: Log GPIO writes on non-GPIO carts as Pak Hardware instead of Memory
 - Qt: Add ROM filename and size to bug reporter
 - Qt: Improve handling of disabling VBA bug compat mode (fixes mgba.io/i/2129)

0.9.0: (2021-03-28)
Features:
 - e-Reader card scanning
 - New tool for converting between different save game formats
 - WebP and APNG recording
 - Separate overrides for GBC games that can also run on SGB or regular GB
 - Game Boy Player features can be enabled by default for all compatible games
 - Frame and I/O viewer support for Game Boy
 - Bug report tool for gathering information helpful for reporting bugs
 - Mute option in homebrew ports
 - Status indicators for fast-forward and mute in homebrew ports
 - VBA bug compatibility mode for ROM hacks that don't work on real hardware
 - Read-only support for MBC6 flash memory
 - New unlicensed GB mappers: Pokémon Jade/Diamond, BBD, and Hitek
 - Stack tracing tools in ARM debugger (by ahigerd)
 - Command scripts for CLI debugger (by ahigerd)
 - Scheduled event dumping in CLI debugger
 - ARM disassembler now resolves addresses to symbol names
 - Add Game Boy Player feature support to ports
 - Individual window types can now be toggled in debugging views
 - Support for the Wii U GamePad when running as an injected VC title
Emulation fixes:
 - ARM: Fix ALU reading PC after shifting
 - ARM: Fix STR storing PC after address calculation